Add semantic search interfaces , integration into search